--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do List</title>
+    <title>Task | Currency Convert</title>
 
     <link rel="shortcut icon" type="x-icon" href="./icons/icon.png">
 
@@ -13,6 +13,26 @@
 </head>
 
 <body>
+    <header id="header">
+        <div class="logo">
+            <img src="./img/Logo.png" alt="Logo" srcset="">
+        </div>
+        <div class="menu">
+            <ul class="menu-list">
+                <li class="menu-item">БАНК</li>
+                <li class="menu-item">БИЗНЕС</li>
+                <li class="menu-item">ИНВЕСТИЦИИ</li>
+                <li class="menu-item">СТРАХОВАНИЕ</li>
+                <li class="menu-item">МОБАЙЛ</li>
+                <li class="menu-item">ПУТЕШЕСТВИЯ</li>
+                <li class="menu-item">РАЗВЛЕЧЕНИЯ</li>
+            </ul>
+        </div>
+        <div class="login">
+            <button>ВОЙТИ</button>
+        </div>
+    </header>
+
     <div class="container">
         <div class="row">
             <div class="col">
