Html and Css codes finish

--- a/index.html
+++ b/index.html
@@ -34,8 +34,33 @@
     </header>
 
     <div class="container">
+        <h2>Конвертер валют онлайн</h2>
         <div class="row">
             <div class="col">
+                <p>У меня есть</p>
+                <ul class="currency-types">
+                    <li class="">RUB</li>
+                    <li class="">USD</li>
+                    <li class="">EUR</li>
+                    <li class="">GBP</li>
+                </ul>
+                <div class="result">
+                    <p>5000</p>
+                    <span>1 RUB = 0.0135 USD</span>
+                </div>
+            </div>
+            <div class="col">
+                <p>У меня есть</p>
+                <ul class="currency-types">
+                    <li class="">RUB</li>
+                    <li class="">USD</li>
+                    <li class="">EUR</li>
+                    <li class="">GBP</li>
+                </ul>
+                <div class="result">
+                    <p>67.6685</p>
+                    <span>1 USD = 73.8896 RUB</span>
+                </div>
             </div>
         </div>
     </div>
