Readme.md Update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="menu">
             <ul class="menu-list">
-                <button class="exitBtn">Exit</button>
+                <button class="exitBtn">ВЫХОД</button>
                 <li class="menu-item">БАНК</li>
                 <li class="menu-item">БИЗНЕС</li>
                 <li class="menu-item">ИНВЕСТИЦИИ</li>
@@ -31,7 +31,7 @@
         </div>
         <div class="login">
             <button class="loginBtn">ВОЙТИ</button>
-            <button class="viewBtn">Menu</button>
+            <button class="viewBtn">МЕНЮ</button>
         </div>
 
     </header>
