--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="" id="GBP">GBP</li>
                 </ul>
                 <div class="result right-result">
-                    <input class="right-input" type="number">
+                    <p class="right">0</p>
                     <span>1 USD = 71.343678 RUB</span>
                 </div>
             </div>
