--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task | Currency Convert</title>
+    <title>Currency Convert | Apllication</title>
 
     <link rel="shortcut icon" type="x-icon" href="./img/icon.png">
 
