feat: convert project code optmisition

--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
             <div class="col">
                 <p>У меня есть</p>
                 <ul class="currency-types btnLeft">
-                    <li class="active" id="RUB">RUB</li>
-                    <li class="" id="USD">USD</li>
-                    <li class="" id="EUR">EUR</li>
-                    <li class="" id="GBP">GBP</li>
+                    <li class="active" id="AZN">AZN</li>
+                    <li id="USD">USD</li>
+                    <li id="TRY">TRY</li>
+                    <li id="EUR">EUR</li>
                 </ul>
                 <div class="result left-result">
-                    <input class="left-input" type="number">
-                    <span>1 RUB = 0.014017 USD</span>
+                    <input class="left-input" type="number" value="1">
+                    <span></span>
                 </div>
             </div>
             <div class="col">
                 <p>Хочу приобрести</p>
                 <ul class="currency-types btnRight">
-                    <li class="" id="RUB">RUB</li>
+                    <li id="AZN">AZN</li>
                     <li class="active" id="USD">USD</li>
-                    <li class="" id="EUR">EUR</li>
-                    <li class="" id="GBP">GBP</li>
+                    <li id="TRY">TRY</li>
+                    <li id="EUR">EUR</li>
                 </ul>
                 <div class="result right-result">
-                    <p class="right">0</p>
-                    <span>1 USD = 71.343678 RUB</span>
+                    <input class="right-input" type="number" disabled>
+                    <span></span>
                 </div>
             </div>
         </div>
